menu, input css

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             notifications
         </span>
     </nav>
+    <div class="black" id="black"></div>
     <section class="main" >
         <div class="leftMenu" id="leftMenu">
             <div class="home">
